# aliyun-oss-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: blocking.rs  common.rs  error.rs  lib.rs  oss.rs  request.rs  request_sync.rs
src/bucket/: abort_bucket_worm.rs  abort_bucket_worm_sync.rs  complete_bucket_worm.rs  complete_bucket_worm_sync.rs  del_bucket.rs  del_bucket_cors.rs  del_bucket_cors_sync.rs  del_bucket_encryption.rs  del_bucket_encryption_sync.rs  del_bucket_inventory.rs  del_bucket_inventory_sync.rs  del_bucket_lifecycle.rs  del_bucket_lifecycle_sync.rs  del_bucket_logging.rs  del_bucket_logging_sync.rs  del_bucket_policy.rs  del_bucket_policy_sync.rs  del_bucket_referer.rs  del_bucket_sync.rs  del_bucket_tags.rs  del_bucket_tags_sync.rs  del_bucket_website.rs  del_bucket_website_sync.rs  del_objects.rs  del_objects_sync.rs  extend_bucket_worm.rs  extend_bucket_worm_sync.rs  get_bucket_acl.rs  get_bucket_acl_sync.rs  get_bucket_cors.rs  get_bucket_cors_sync.rs  get_bucket_encryption.rs  get_bucket_encryption_sync.rs  get_bucket_info.rs  get_bucket_info_sync.rs  get_bucket_inventory.rs  get_bucket_inventory_sync.rs  get_bucket_lifecycle.rs  get_bucket_lifecycle_sync.rs  get_bucket_location.rs  (+63 more)
src/client/: describe_regions.rs  describe_regions_sync.rs  list_buckets.rs  list_buckets_sync.rs  mod.rs  oss_client.rs
src/object/: append_object.rs  append_object_sync.rs  copy_object.rs  copy_object_sync.rs  del_object.rs  del_object_sync.rs  del_object_tagging.rs  del_object_tagging_sync.rs  get_object.rs  get_object_acl.rs  get_object_acl_sync.rs  get_object_meta.rs  get_object_meta_sync.rs  get_object_sync.rs  get_object_tagging.rs  get_object_tagging_sync.rs  get_object_url.rs  get_object_url_sync.rs  get_symlink.rs  get_symlink_sync.rs  head_object.rs  head_object_sync.rs  mod.rs  multipart_abort_upload.rs  multipart_abort_upload_sync.rs  multipart_complete_upload.rs  multipart_complete_upload_sync.rs  multipart_copyto_part.rs  multipart_copyto_part_sync.rs  multipart_init_upload.rs  multipart_init_upload_sync.rs  multipart_list_parts.rs  multipart_list_parts_sync.rs  multipart_upload_part.rs  multipart_upload_part_sync.rs  oss_object.rs  put_object.rs  put_object_acl.rs  put_object_acl_sync.rs  put_object_sync.rs  (+8 more)
