[package]
name = "aliyun-oss-rs"
version = "0.1.1"
edition = "2024"
authors = ["Ethan Archer"]
license = "0BSD"
readme = "README.md"
repository = "https://github.com/AldenClark/aliyun-oss-rs"
description = "A non-official Rust SDK implementation for Alibaba Cloud OSS."

[dependencies]
base64 = "^0.22.1"
bytes = "^1.10.1"
time = { version = "^0.3.43", features = ["formatting", "parsing"] }
futures-util = { version = "^0.3.31", default-features = false, optional = true }
hyper = { version = "^1.7.0", features = ["http1", "client"], optional = true }
hyper-rustls = { version = "0.27", default-features = false, optional = true }
hyper-tls = { version = "^0.6.0", optional = true }
http = "^1.3.1"
ureq = { version = "^3.1.0", default-features = false, features = [
  "native-tls",
], optional = true }
hyper-util = { version = "^0.1.16", features = [
  "client-legacy",
  "http1",
], optional = true }
http-body-util = { version = "^0.1.3", optional = true }
http-body = { version = "^1.0.1", optional = true }
infer = "^0.19.0"
mime_guess = "^2.0.5"
percent-encoding = "^2.3.2"
ring = "^0.17.14"
serde = "^1.0.219"
serde-xml-rs = "^0.8.1"
serde_derive = "^1.0.219"
thiserror = "^2.0.16"
tokio = { version = "^1.47.1", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
], optional = true }
tokio-util = { version = "^0.7.16", features = ["io"], optional = true }
md-5 = "^0.10.6"

[features]
default = ["async", "native-tls"]
async = [
  "tokio",
  "tokio-util",
  "hyper",
  "hyper-util",
  "http-body-util",
  "http-body",
  "futures-util",
]
native-tls = ["hyper-tls"]
rustls = [
  "hyper-rustls",
  "hyper-rustls/http1",
  "hyper-rustls/http2",
  "hyper-rustls/native-tokio",
  "hyper-rustls/tls12",
  "hyper-rustls/rustls-native-certs",
]
ring = ["hyper-rustls/ring"]
aws-lc-rs = ["hyper-rustls/aws-lc-rs"]
sync = ["ureq"]
