[package]
name = "aliyun-oss-rs"
version = "0.2.0"
edition = "2024"
authors = ["Ethan Archer"]
license = "0BSD"
readme = "README.md"
repository = "https://github.com/AldenClark/aliyun-oss-rs"
description = "A non-official Rust SDK implementation for Alibaba Cloud OSS."

[dependencies]
base64 = "^0.22.1"
bytes = "^1.11.0"
time = { version = "^0.3.45", features = ["formatting", "parsing"] }
futures-util = { version = "^0.3.31", default-features = false, optional = true }
hyper = { version = "^1.8.1", features = ["http1", "client"], optional = true }
hyper-tls = { version = "^0.6.0", optional = true }
http = "^1.4.0"
ureq = { version = "^3.1.4", default-features = false, features = [
    "native-tls",
], optional = true }
hyper-util = { version = "^0.1.19", features = [
    "client-legacy",
    "http1",
], optional = true }
http-body-util = { version = "^0.1.3", optional = true }
http-body = { version = "^1.0.1", optional = true }
infer = "^0.19.0"
mime_guess = "^2.0.5"
percent-encoding = "^2.3.2"
ring = "^0.17.14"
serde = "^1.0.228"
serde-xml-rs = "^0.8.2"
serde_derive = "^1.0.228"
thiserror = "^2.0.18"
tokio = { version = "^1.49.0", features = [
    "fs",
    "io-util",
    "rt-multi-thread",
], optional = true }
tokio-util = { version = "^0.7.18", features = ["io"], optional = true }
md-5 = "^0.11.0-rc.3"

[features]
default = ["async"]
async = [
    "tokio",
    "tokio-util",
    "hyper",
    "hyper-tls",
    "hyper-util",
    "http-body-util",
    "http-body",
    "futures-util",
]
sync = ["ureq"]
